# fluxbox

./: .cvsignore  .gitignore  .mailmap  AUTHORS  BUGS  CONTRIBUTING  COPYING  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  RoadMap  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  mkinstalldirs  version.h.in  xft.m4
data/: .cvsignore  Makefile.am  Makefile.in  Makemodule.am  README  README.menu  README.style  apps.in  fluxbox-generate_menu  generate_menu  init.in  keys  startup.in  titlebar  windowmenu
data/styles/: Artwiz  Blue  BlueNight  Carbondioxide  Clean  CleanColor  Cthulhain  Flux  LemonSpace  Makefile.am  Makefile.in  Makefile.include  Makro  MerleyKay  Meta  Minimal  Nyz  Operation  Outcomes  Rampage  Rancor  Results  Shade  Spiff  TDF  Twice  qnx-photon
doc/: .cvsignore  Coding_style  Makefile.am  Makefile.in  Makemodule.am  README.txt  bsetroot.1  ewmh-support.csv  ewmh-support.gnumeric  fbrun.1  fbrun.1.in  fbsetbg.1  fbsetbg.1.in  fbsetroot.1  fbsetroot.1.in  fluxbox-apps.5  fluxbox-apps.5.in  fluxbox-keys.5  fluxbox-keys.5.in  fluxbox-menu.5.in  fluxbox-remote.1  fluxbox-remote.1.in  fluxbox-style.5.in  fluxbox.1.in  fluxboxstyle.1  fluxstyle.1  fluxstyle.1.in  startfluxbox.1  startfluxbox.1.in
doc/asciidoc/: Makefile  README.txt  client-patterns.txt  fbrun.1.txt  fbrun.txt  fbsetbg.txt  fbsetroot.txt  fluxbox-apps.5  fluxbox-apps.5.txt  fluxbox-apps.txt  fluxbox-keys.5  fluxbox-keys.txt  fluxbox-menu.txt  fluxbox-remote.txt  fluxbox-style.1  fluxbox-style.txt  fluxbox.1  fluxbox.de.1  fluxbox.de.txt  fluxbox.es.1  fluxbox.es.txt  fluxbox.txt  fluxstyle.1  fluxstyle.txt  startfluxbox.1.txt  startfluxbox.txt
doc/ru/: Makefile.am  fluxbox.1.in
nls/: .cvsignore  Makefile.am  Makefile.in  Makemodule.am  blackbox-nls.hh  convert.awk  fluxbox-nls.hh  nls.mk  nlsinfo  translators.txt
nls/C/: Configmenu.m  Makefile.am  Makefile.in  Screen.m  Translation.m  Windowmenu.m  common.m  main.m
nls/be_BY/: Makefile.am  Translation.m  generated-CP1251.m  generated-UTF-8.m
nls/bg_BG/: BaseDisplay.m  Basemenu.m  Configmenu.m  Icon.m  Image.m  Makefile.am  Screen.m  Slit.m  Toolbar.m  Translation.m  Window.m  Windowmenu.m  Workspace.m  Workspacemenu.m  common.m  generated-ISO-8859-1.m  generated-UTF-8.m  main.m
nls/cs_CZ/: Makefile.am  Translation.m  generated-ISO-8859-2.m  generated-UTF-8.m
nls/da_DK/: Configmenu.m  Makefile.am  Makefile.in  Translation.m  Window.m  Windowmenu.m  common.m  generated-ISO-8859-1.m  generated-UTF-8.m  main.m
nls/de_AT/: Makefile.am  Translation.m  generated-ISO-8859-15.m  generated-UTF-8.m
nls/de_CH/: Makefile.am  Translation.m  generated-ISO-8859-15.m  generated-UTF-8.m
nls/de_DE/: BaseDisplay.m  Basemenu.m  Configmenu.m  Makefile.am  Screen.m  Slit.m  Toolbar.m  Translation.m  Windowmenu.m  common.m  generated-ISO-8859-15.m  generated-UTF-8.m  main.m
nls/el_GR/: Makefile.am  Translation.m  generated-UTF-8.m  generated-utf8.m
nls/en_GB/: Makefile.am  Translation.m  generated-ISO-8859-1.m  generated-UTF-8.m
nls/en_US/: Makefile.am  Translation.m  generated-ISO-8859-1.m  generated-UTF-8.m
nls/es_AR/: Makefile.am  Makefile.in  generated-ISO-8859-15.m  generated-UTF-8.m
nls/es_ES/: Configmenu.m  Makefile.am  Makefile.in  Translation.m  Window.m  Windowmenu.m  common.m  generated-ISO-8859-15.m  generated-UTF-8.m  main.m
nls/et_EE/: Configmenu.m  Makefile.am  Makefile.in  Translation.m  Window.m  Windowmenu.m  common.m  generated-ISO-8859-15.m  generated-UTF-8.m  main.m
nls/fi_FI/: Makefile.am  Translation.m  generated-UTF-8.m
nls/fr_CH/: Makefile.am  Translation.m  generated-UTF-8.m
nls/fr_FR/: Basemenu.m  Configmenu.m  Makefile.am  Makefile.in  Translation.m  Window.m  Windowmenu.m  common.m  generated-ISO-8859-15.m  generated-UTF-8.m  main.m
nls/he_IL/: Makefile.am  Translation.m
nls/it_IT/: BaseDisplay.m  Basemenu.m  Configmenu.m  Image.m  Makefile.am  Makefile.in  Screen.m  Slit.m  Toolbar.m  Translation.m  Window.m  Windowmenu.m  Workspace.m  Workspacemenu.m  blackbox.m  bsetroot.m  common.m  generated-ISO-8859-1.m  generated-UTF-8.m  main.m
nls/ja_JP/: BaseDisplay.m  Basemenu.m  Configmenu.m  Image.m  Makefile.am  Screen.m  Toolbar.m  Translation.m  Window.m  Windowmenu.m  Workspacemenu.m  bsetroot.m  common.m  fluxbox.m  generated-UTF-8.m  generated-eucJP.m  main.m
nls/ko_KR/: Makefile.am  Makefile.in  Translation.m  generated-EUC-KR.m  generated-UTF-8.m
nls/lv_LV/: Basemenu.m  Configmenu.m  Makefile.am  Translation.m  Window.m  Windowmenu.m  common.m  fluxbox.m  generated-ISO-8859-13.m  generated-UTF-8.m  main.m
nls/mk_MK/: Makefile  Makefile.am  Makefile.in  Translation.m  fluxbox-UTF-8.cat  generated-UTF-8.m
nls/nb_NO/: Makefile.am  Translation.m  fluxbox-generate_menu.in  generated-UTF-8.m
nls/nl_NL/: .cvsignore  Configmenu.m  Makefile.am  Slit.m  Toolbar.m  Translation.m  Window.m  Windowmenu.m  Workspace.m  Workspacemenu.m  common.m  fluxbox.m  generated-ISO-8859-15.m  generated-UTF-8.m  main.m
nls/no_NO/: Makefile.am  Translation.m  generated-ISO-8859-1.m  generated-UTF-8.m
src/: .cvsignore  AlphaMenu.cc  AlphaMenu.hh  ArrowButton.cc  ArrowButton.hh  AtomHandler.hh  AttentionNoticeHandler.cc  AttentionNoticeHandler.hh  BaseDisplay.cc  BaseDisplay.hh  Basemenu.cc  Basemenu.hh  BoolMenuItem.hh  BorderTheme.cc  BorderTheme.hh  ButtonTheme.cc  ButtonTheme.hh  ButtonTool.cc  ButtonTool.hh  CascadePlacement.cc  CascadePlacement.hh  ClientMenu.cc  ClientMenu.hh  ClientPattern.cc  ClientPattern.hh  Clientmenu.cc  Clientmenu.hh  ClockTool.cc  ClockTool.hh  ColSmartPlacement.cc  ColSmartPlacement.hh  Color.cc  Color.hh  CommandDialog.cc  CommandDialog.hh  CommandParser.cc  CommandParser.hh  CompareWindow.hh  ConfigMenu.cc  ConfigMenu.hh  (+236 more)
util/: .cvsignore  Makefile.am  Makefile.in  Makemodule.am  bsetbg  bsetroot.cc  bsetroot.hh  fbsetbg  fbsetroot.cc  fbsetroot.hh  fbsystem-style-font-resizer  fluxbox-generate_menu  fluxbox-generate_menu.in  fluxbox-remote.cc  fluxbox-update_configs.cc  startfluxbox.in
(+347 files in other folders)
